--- a/Webshop.Data/Webshop.DataSource.csproj
+++ b/Webshop.Data/Webshop.DataSource.csproj
@@ -16,4 +16,6 @@
     <ProjectReference Include="..\Webshop.DTO\Webshop.DTO.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
+
 </Project>
