Finalized Shopping Cart Front&Backend

--- a/Webshop.UI/Webshop.UI.csproj
+++ b/Webshop.UI/Webshop.UI.csproj
@@ -29,4 +29,8 @@
     <ProjectReference Include="..\Webshop.DTO\Webshop.DTO.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Cart\" />
+  </ItemGroup>
+
 </Project>
