--- a/Webshop.UI/Webshop.UI.csproj
+++ b/Webshop.UI/Webshop.UI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -27,10 +27,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Webshop.DAL\Webshop.DAL.csproj" />
     <ProjectReference Include="..\Webshop.DTO\Webshop.DTO.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Pages\Cart\" />
   </ItemGroup>
 
 </Project>
